Create a function which replaces vowels with "-"

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <br>
           <input type="text" id="word-puzzle">
           <br><br>
-          <button type="button">Submit</button>
+          <button type="button" onclick="return replaceVowel()">Submit</button>
         </form>
         <div>
           <p id="output"></p>
