Add a small descirption of the web application

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
       <div class="card">
         <div class="card-heading">
-          <h1>Word puzzle</h1>
+          <h1>'Guess the Word' generator</h1>
         </div>
       </div>
       <div class="card">
         <div class="card-body">
           <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque 
-            volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, 
-            viverra non, semper suscipit, posuere a, pede.
+            Challenge your family or friends with the 'Guess the Word' generator!
+          <p>
+          </p>
+            Type in any word/sentence in the field below and click the submit button.
+            The web application will replace the vowels of your word/sentence with the '-'
+            character and output the result, hence, the 'Guess the Word' generator!
           </p>
           <form name="word-puzzle" >
             <label for="word-puzzle">Enter any sentence/word here:</label>
