Change the font of the landing page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Word Puzzle</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/puzzle.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fuzzy+Bubbles">
 <body>
   <div class="container">
     <!-- Center vertically the components of the landing page -->
