Increase the width of the input box

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <form name="word-puzzle" >
             <label for="word-puzzle">Enter any sentence/word here:</label>
             <br>
-            <input type="text" id="word-puzzle">
+            <input type="text" id="word-puzzle" class="word-puzzle">
             <br><br>
             <button type="button" onclick="return replaceVowel()">Submit</button>
           </form>
